--- a/BACKEND/vercel.json
+++ b/BACKEND/vercel.json
@@ -1,10 +1,10 @@
 {
     "version": 2,
-    "name": "music-album",
+    "name": "new-album",
     "builds": [
-       { "src": "server.js", "use": "@vercel/node" }
+       { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-       { "src": "/(.*)", "dest": "/server.js" }
+       { "src": "/(.*)", "dest": "/*.js" }
     ]
  }
