--- a/BACKEND/vercel.json
+++ b/BACKEND/vercel.json
@@ -1,10 +1,27 @@
 {
-    "version": 2,
-    "name": "new-album",
-    "builds": [
-       { "src": "*.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "/*.js" }
-    ]
+   "version": 2,
+   "builds": [
+     {
+       "src": "server.js",
+       "use": "@vercel/node"
+     },
+     {
+       "src": "frontend/**", 
+       "use": "@vercel/static-build",
+       "config": {
+         "distDir": "frontend/dist"
+       }
+     }
+   ],
+   "routes": [
+     {
+       "src": "/api/(.*)",
+       "dest": "/server.js"
+     },
+     {
+       "src": "/(.*)",
+       "dest": "/frontend/dist/$1"
+     }
+   ]
  }
+ 
