--- a/FRONTEND/vercel.json
+++ b/FRONTEND/vercel.json
@@ -1,27 +1,18 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "api/**/*.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "frontend/**", 
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "frontend/dist"  
-      }
+  "version": 2,
+  "builds": [
+    {
+      "src": "vite.config.js",
+      "use": "@vercel/static-build"
     }
-    ],
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "/api/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/frontend/dist/$1" 
-      }
-    ]
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+  "static": {
+    "public": "dist"
   }
-  
+}
